<resources>
    <!--main strings start-->
    <string name="app_name" translatable="false">MusicMap</string>
    <!--main strings end-->

    <!--user strings start-->
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="birthdate">Birthdate</string>
    <!--user strings end-->

    <!--auth strings start-->
    <string name="identifier">Username/Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="login">Login</string>
    <string name="log_in_alt_account">Log in with another account</string>
    <string name="logout">Log out</string>
    <string name="delete_account">Delete Account</string>
    <string name="register">Register</string>
    <string name="register_artist">Register as Artist</string>
    <string name="email_verified">Your email is verified!</string>
    <string name="email_not_verified">Your email is not verified!</string>
    <string name="awaiting_verification">Account awaiting verification.</string>
    <string name="awaiting_verification_text">Since you registered as an artist we first need to make sure that your request is authentic.</string>
    <!--auth strings end-->

    <!--error strings start-->
    <string name="auth_error_something_wrong">Something went wrong.</string>
    <string name="error_no_internet">Could not detect an internet connection.</string>
    <string name="auth_error_incorrect_email_password">Incorrect email or password.</string>
    <string name="auth_error_incorrect_username_password">Incorrect username or password.</string>
    <string name="input_error_enter_email">Please enter an email address.</string>
    <string name="input_error_valid_email">Please enter a valid email address.</string>
    <string name="input_error_unexpected">Unexpected input.</string>
    <string name="input_error_enter_password">Please enter a password.</string>
    <string name="input_error_valid_password">Please enter a valid password.</string>
    <string name="input_error_enter_username">Please enter a username.</string>
    <string name="input_error_valid_username">Please enter a valid username.</string>
    <string name="input_error_username_exists">Username already exists!</string>
    <string name="input_error_enter_first_name">Please enter a First name.</string>
    <string name="input_error_enter_last_name">Please enter a Last name.</string>
    <string name="input_error_passwords_not_matching">Passwords do not match!</string>
    <string name="input_error_pick_date">Please pick a date.</string>
    <string name="input_exception_date_null">The date was parsed but the date is null.</string>
    <string name="auth_error_invalid_values">Some of the fields are incomplete or contain invalid values.</string>
    <string name="auth_error_failed_registration">Could not register, please try again later!</string>
    <!--error strings end-->

    <!--navbar strings start-->
    <string name="navbar_post">Post</string>
    <string name="navbar_feed">Feed</string>
    <string name="navbar_map">Map</string>
    <!--navbar strings end-->

    <!--buttons strings start-->
    <string name="back">Back</string>
    <!--buttons strings end-->

    <!--appbar strings start-->
    <string name="appbar_search">Search</string>
    <string name="appbar_profile">Profile</string>
    <string name="appbar_icon">Icon</string>
    <!--appbar strings end-->

    <!--message strings start-->
    <string name="message_default_action_text">OK</string>
    <string name="message_default_success_text">SUCCESS</string>
    <string name="message_default_failure_text">ERROR</string>
    <!--message strings end-->

    <!--profile strings start-->
    <string name="profile_picture">Profile picture</string>
    <string name="profile_page_mm">Recent Music Memories:</string>
    <!--profile strings start-->

    <!--artist data strings start-->
    <string name="artist_data_page">Artist Data Page</string>
    <string name="map_label">Where is your music mostly streamed?</string>
    <string name="top_streams_label">Top played songs:</string>
    <string name="total_streams_label">Total streams:</string>
    <string name="welcome_data_page">Welcome to your data page!</string>
    <string name="ranking_artist">Your ranking as an artist:</string>
    <!--artist data strings end-->
</resources>